--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -296,7 +296,7 @@
         </a>
       </li>
       <li>
-        <a href="" class="group">
+        <a href="{% url 'config' %}" class="group">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
