--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -55,7 +55,7 @@
       <div class="flex flex-col items-center justify-center sm:block">
         <div class="mb-3 flex flex-col gap-1">
           <label for="school-code">Escola:</label>
-          <input type="text" name="school-code" id="school-code" required />
+          <input type="text" name="code" id="school-code" required />
         </div>
         <div class="gap-2 md:flex">
           <div class="mb-3 flex flex-col gap-1">
