--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -361,20 +361,25 @@
           class="flex items-center justify-between rounded-3xl bg-color-primary-dimm px-1 py-2"
         >
           <a href="{% url 'profile' %}">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="h-12 w-12"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z"
-              />
-            </svg>
+            <div x-show="!eval(localStorage.getItem('toggleImage'))">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-12 w-12"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z"
+                />
+              </svg>
+            </div>
+            <div x-show="eval(localStorage.getItem('toggleImage'))">
+              <img src="{% url 'img' 'pictures' user.pk %}" class="w-12 h-12">
+            </div>
           </a>
           <div class="flex w-3/5 flex-col px-1 text-sm">
             <span>
