--- a/core/templates/core/configuracao.html
+++ b/core/templates/core/configuracao.html
@@ -5,19 +5,26 @@
 
 <h1 class="mb-11 px-8 text-4xl font-bold text-color-primary">Configurações</h1>
 <main class="flex justify-center">
-
-  <div class="flex justify-center items-center mt-[5%] bg-zinc-100 h-96 w-96 shadow-lg rounded-md">
+  <div
+    class="mt-[5%] flex h-96 w-96 items-center justify-center rounded-md bg-zinc-100 shadow-lg"
+  >
     <div class="h-[90%] w-[90%]">
-      <label class="info-lbl text-lg">Mostrar foto?
-        
-
+      <span class="info-lbl flex pb-1 text-lg">Mostrar foto?</span>
+      <label class="relative mb-5 inline-flex cursor-pointer items-center">
+        <input
+          type="checkbox"
+          value="toggleImage"
+          name="toggleImage"
+          class="peer sr-only"
+          x-init="$el.checked = eval(localStorage.getItem('toggleImage'))"
+          @click="localStorage.setItem('toggleImage', $el.checked)"
+        />
+        <div
+          class="peer h-6 w-11 rounded-full bg-gray-200 after:absolute after:start-[2px] after:top-[2px] after:h-5 after:w-5 after:rounded-full after:border after:border-gray-300 after:bg-white after:transition-all after:content-[''] peer-checked:bg-blue-600 peer-checked:after:translate-x-full peer-checked:after:border-white peer-focus:ring-blue-300 rtl:peer-checked:after:-translate-x-full dark:border-gray-600 dark:bg-gray-700 dark:peer-focus:ring-blue-800"
+        ></div>
       </label>
     </div>
-
   </div>
-
-
-
 </main>
 
 {% endblock %}
