--- a/grades/templates/grades/provas.html
+++ b/grades/templates/grades/provas.html
@@ -73,7 +73,7 @@
     >
       <div>
         <p>Bimestre: <span>{{ t.bimester }}</span></p>
-        <p>Sobre: <span>{{ t.kind }}</span></p>
+        <p>Sobre: <span>{{ t.get_kind_display }}</span></p>
       </div>
       <p>{{ t.content }}</p>
     </div>
