--- a/grades/templates/grades/chamada.html
+++ b/grades/templates/grades/chamada.html
@@ -14,6 +14,9 @@
       },
 
       load(classroom) {
+        for (const inputEl of document.querySelectorAll("input"))
+          if (inputEl.type == "checkbox") inputEl.checked = false;
+
         this.classroom = classroom;
         const teacher = "{{ user.pk }}";
         fetch(
