fixed links for roles

--- a/grades/templates/grades/provas.html
+++ b/grades/templates/grades/provas.html
@@ -14,7 +14,7 @@
   
   {% for t in tests %}
   <div
-    class="rounded-2xl bg-gray-100 shadow"
+    class="rounded-2xl bg-gray-100 shadow mb-5"
     x-data="{ options: false, details: false }"
   >
     <header class="flex justify-between px-6 py-4">
