--- a/grades/templates/grades/turmas.html
+++ b/grades/templates/grades/turmas.html
@@ -361,7 +361,7 @@
 
     <template x-for="a in assessments">
       <div
-        class="rounded-2xl bg-gray-100 shadow"
+        class="rounded-2xl bg-gray-100 shadow mb-5"
         x-data="{ options: false, details: false }"
       >
         <header class="flex justify-between px-6 py-4">
