--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -20,7 +20,7 @@
       return;
     }
 
-    alert("Espere até 15 minutos para tentar um login novamente");
+    alert("Espere até 15 minutos para tentar um login novamente"); // TODO: actually block login
   }
 </script>
 <title>DEMZER - Login</title>
@@ -86,6 +86,7 @@
           />
         </div>
       </div>
+      <!-- TODO: CAPTCHA -->
     </form>
     <aside class="hidden w-1/2 rounded-3xl bg-gray-200 sm:block"></aside>
     <img
