--- a/grades/templates/grades/provas.html
+++ b/grades/templates/grades/provas.html
@@ -2,7 +2,9 @@
 <title>Provas</title>
 {% endblock %} {% block content %}
 <main class="mx-10 mb-20 mt-4 md:mx-14">
-  <h1 class="text-center md:text-left">Provas</h1>
+  <h1 class="text-center md:text-left">
+    Provas
+  </h1>
 
   {% if user|has_role:'teacher' %}
   <ul class="mt-10 flex gap-4">
