--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -4,9 +4,7 @@
 <title>Dashboard</title>
 {% endblock %} {% block content %}
 <main x-data="dashboard" x-init="reload(`{% url 'query' 'student' %}`)">
-  <h1 class="m-5 text-2xl">
-    Dashboard
-  </h1>
+  <h1 class="m-5 text-2xl">Dashboard</h1>
   <header id="sectors" class="bg-color-bg-alt p-5">
     {% csrf_token %}
     <ul id="sectors" class="flex select-none gap-4">
@@ -102,6 +100,7 @@
         </tr>
       </thead>
       <tbody>
+        <!-- TODO: see info + block/delete profile -->
         <template x-for="row in rows">
           <tr>
             <template x-for="value in row">
@@ -113,13 +112,10 @@
     </table>
   </section>
   <form>
-    <div
-      :class="filterDialog ? 'flex' : 'hidden'"
-      class="fixed inset-0 items-center justify-center bg-black bg-opacity-25"
-    >
-      <div class="h-4/5 w-2/5 rounded-3xl bg-color-grey">
+    <div x-show="filterDialog" class="dialog-backdrop">
+      <div class="dialog no_scroll">
         <header
-          class="mx-10 mt-8 flex flex-row justify-between text-3xl font-bold"
+          class="mt-3 px-4 flex flex-row justify-between text-3xl font-bold"
         >
           <h2>Filtrar Alunos</h2>
           <div>
@@ -144,7 +140,7 @@
             </button>
           </div>
         </header>
-        <section class="flex flex-col gap-4 p-10">
+        <section class="flex flex-col gap-4 px-4">
           <label>
             RM
             <input
