fixed schedules and tests for students

--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -258,7 +258,7 @@
           <li>
             <a
               {% if user|has_role:'student' %}
-              href="{% url 'provas' user.classroom.pk %}"
+              href="{% url 'provas' user.profile.classroom.pk %}"
               {% elif user|has_role:'teacher' %}
               href="{% url 'provas' 0 %}"
               {% endif %}
