--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -12,7 +12,7 @@
   {% endif %}
 
   <div class="mt-8 flex justify-center md:mt-16">
-    <div class="lg:h-96 lg:w-96 flex h-40 w-96 items-center justify-center">
+    <div class="lg:h-96 lg:w-96 flex h-40 w-96 items-center justify-center z-0">
       <div class="swiper mySwiper carousel1">
         <div class="swiper-wrapper">
           {% for prog in programmings %}
