--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -102,7 +102,7 @@ dialog,
 }
 
 .dialog-backdrop {
-  @apply fixed inset-0 flex items-center justify-center bg-black bg-opacity-25;
+  @apply fixed inset-0 flex items-center justify-center bg-black bg-opacity-25 z-10;
 }
 
 dialog header,
