--- a/grades/templates/grades/provas.html
+++ b/grades/templates/grades/provas.html
@@ -3,7 +3,7 @@
 {% endblock %} {% block content %}
 <main class="mx-10 mb-20 mt-4 md:mx-14">
   <h1 class="text-center md:text-left">
-    Provas
+    Provas e Atividades
   </h1>
 
   {% if user|has_role:'teacher' %}
