improved messages ui + password form

--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -56,7 +56,9 @@
             Contato
           </button>
         </li>
-        <!-- <li>
+        <!-- 
+        TODO: Tela de finalização e confirmação  
+        <li>
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
