--- a/communication/templates/communication/alert/alert.html
+++ b/communication/templates/communication/alert/alert.html
@@ -66,7 +66,7 @@
         cols="50"
         rows="6"
         maxlength="400"
-        class="appearance-none"
+        class="appearance-none resize-none"
         required
       ></textarea>
     </div>
